# scripts

./: .editorconfig  .gitignore  .shellcheckrc  LICENSE  README.md  cpuopt.sh  devbox.sh  feed.sh  modules.sh  pomodoro.sh  provision.sh  sandbox.py  screenset.pl  setup.sh  trains.sh  up.sh  vault.sh  watcher.py
cpuopt/: cpuopt.sh  cpuoptrc
dev/: discourse.sh
log-analysis/: cef2json.py
pass-to-keepass/: pyproject.toml
pass-to-keepass/pass_to_keepass/: __init__.py
reinstall/: .gitignore  build-vm.sh  config.json  initramfs-hook.sh  initramfs-script.sh  reinstall.sh
reinstall/files/: apt-fast.conf  authorized_keys  hosts  jail.local  nftables.conf  rc.local  sshd_config  tmux.conf
reinstall/hooks/: 01-packages.sh  02-golang.sh  02-mysql.sh  02-nodejs.sh  02-podman.sh  02-postgresql.sh  02-ruby.sh.disabled  03-yarn.sh  09-system.sh
sandbox/: .gitignore  README.md  create-vm-image.sh  mkimage.sh  setup-vm.sh
